# bookstore

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
seed/: fde89e29e13b_seed_super_admin.py
seed/data/: load.sql
src/bookstore/: config.py  logger.py  main.py  middleware.py  utils.py
src/bookstore/auth/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py  utils.py
src/bookstore/books/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/bookstore/borrowing/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/bookstore/database/: models.py  session.py
src/bookstore/database/migrations/: env.py
src/bookstore/database/migrations/versions/: 20df57e102e3_seed_super_admin.py  2869d1723c89_migrations_for_books_package.py  30d0babd2885_migrations_for_borrowing_package.py  31df6bc85038_initial_migrations.py  7053bc0e4632_initial_migrations.py  f46187300410_initial_migrations.py
src/bookstore/notifications/: models.py  repositories.py  schemas.py
src/bookstore/users/: models.py  repositories.py
