[project]
name = "bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "structlog>=25.2.0",
    "types-passlib>=1.7.7.20241221",
    "types-python-jose>=3.4.0.20250224",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.8",
]
dev = [
    "aiosqlite>=0.21.0",
]
